# short-cmake-tutorial

myApp/: CMakeLists.txt  config.h.in
myApp/app/src/: CMakeLists.txt  myApp.cpp
myApp/app/test/: CMakeLists.txt  test_myApp.cpp
myApp/lib/include/: myLib.h
myApp/lib/src/: CMakeLists.txt  myLib.cpp
myApp/lib/src/support/: private.h
myApp/lib/test/: CMakeLists.txt  test_myLib.cpp
platform/cmake/: toolchain-my-platform.cmake
